src/tests/snapshots/swayward__tests__window_opening__check_target_size@dwP0.25-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 340, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 340, bounds: 1240 × 680, states: []
size: 1240 × 658, bounds: 1240 × 680, states: [Activated]
